--- a/Programacio2/Programacio2/Programacio2.vcxproj.filters
+++ b/Programacio2/Programacio2/Programacio2.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="PointTemp.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Circle.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
