--- a/Programacio2/Programacio2/Programacio2.vcxproj
+++ b/Programacio2/Programacio2/Programacio2.vcxproj
@@ -70,6 +70,7 @@
     <ClCompile Include="String.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Circle.h" />
     <ClInclude Include="DynArray.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="Factorial.h" />
