--- a/Programacio2/Programacio2.vcxproj.filters
+++ b/Programacio2/Programacio2.vcxproj.filters
@@ -44,9 +44,6 @@
     <ClInclude Include="Queue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RICARRAY.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Stack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -75,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="log.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Stack2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
