ALgunes coses que es poden millorar

--- a/Programacio2/Programacio2.vcxproj.filters
+++ b/Programacio2/Programacio2.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClInclude Include="Queue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RICARRAY.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="Stack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -74,7 +77,10 @@
     <ClInclude Include="log.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Stack2.h">
+    <ClInclude Include="Stack_List.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Queue_List.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
