--- a/Programacio2/Programacio2.vcxproj
+++ b/Programacio2/Programacio2.vcxproj
@@ -81,8 +81,10 @@
     <ClInclude Include="PointTemp.h" />
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="Queue.h" />
+    <ClInclude Include="Queue_List.h" />
+    <ClInclude Include="RICARRAY.h" />
     <ClInclude Include="Stack.h" />
-    <ClInclude Include="Stack2.h" />
+    <ClInclude Include="Stack_List.h" />
     <ClInclude Include="String.h" />
     <ClInclude Include="Swap.h" />
     <ClInclude Include="Tree.h" />
