--- a/Programacio2/Programacio2.vcxproj.filters
+++ b/Programacio2/Programacio2.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClInclude Include="Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Queue_List2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Prova LOG.vcxproj.filters" />
