--- a/Programacio2/Programacio2.vcxproj
+++ b/Programacio2/Programacio2.vcxproj
@@ -88,6 +88,9 @@
   <ItemGroup>
     <None Include="Prova LOG.vcxproj.filters" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="ejercicios.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
