--- a/Programacio2/Programacio2.vcxproj.filters
+++ b/Programacio2/Programacio2.vcxproj.filters
@@ -75,4 +75,7 @@
   <ItemGroup>
     <None Include="Prova LOG.vcxproj.filters" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="ejercicios.txt" />
+  </ItemGroup>
 </Project>
