Sure thing bruh

--- a/Programacio2/Programacio2.vcxproj
+++ b/Programacio2/Programacio2.vcxproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <ClCompile Include="log.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Point3D.cpp" />
     <ClCompile Include="String.cpp" />
   </ItemGroup>
   <ItemGroup>
