--- a/Programacio2/Programacio2.vcxproj.filters
+++ b/Programacio2/Programacio2.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Point3D.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PointTemp.h">
