--- a/Tests/Tests.vcxproj
+++ b/Tests/Tests.vcxproj
@@ -90,6 +90,7 @@
     <ClCompile Include="BubbleTest.cpp" />
     <ClCompile Include="EXAMEN_FINAL.cpp" />
     <ClCompile Include="ListTest.cpp" />
+    <ClCompile Include="Point3D.cpp" />
     <ClCompile Include="PointTempTest.cpp" />
     <ClCompile Include="QueueTest.cpp" />
     <ClCompile Include="Queue_RIC.cpp" />
